# slowquery-demo-backend

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  WHY.md  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: ARCHITECTURE.md  DEMO.md  DEVIATIONS.md  RENDER_FREE_TIER_MIGRATIONS.md
docs/specs/: 00-schema.md  01-store-writer.md  02-seed-slow.md  03-seed-fast.md  04-demo-endpoints.md  05-slowquery-install.md  06-branches-switch.md  07-traffic-generator.md  08-dashboard-read-api.md  09-sse-stream.md  10-engine-rebuild.md
schemas/: slowquery-demo.yaml
scripts/: __init__.py  _seed_common.py  dev.sh  seed_fast.py  seed_slow.py  set-secrets.sh  set_secrets.py  traffic_generator.py
src/slowquery_demo/: __init__.py  main.py
tests/: conftest.py  test_health.py
tests/integration/: conftest.py  test_00_schema.py  test_01_store_writer.py  test_02_seed_slow.py  test_03_seed_fast.py  test_04_demo_endpoints.py  test_05_slowquery_install.py  test_06_branches_switch.py  test_07_traffic_generator.py
tests/unit/: test_00_schema.py  test_01_store_writer.py  test_02_seed_slow.py  test_03_seed_fast.py  test_04_demo_endpoints.py  test_05_slowquery_install.py  test_06_branches_switch.py  test_07_traffic_generator.py  test_08_dashboard_read_api.py  test_09_sse_stream.py  test_10_engine_rebuild.py  test_dashboard_coverage.py  test_final_coverage.py  test_full_coverage.py  test_pagination_coverage.py  test_repositories_coverage.py  (+3 more)
(+41 files in other folders)
